src/objects/BatchJob__c.object
<CustomObject>
    <description>The BatchJob object is an extended representation of the built-in Apex Batch Job object. The BatchJob object keeps track of additional implementation-specific parameters and information about each job.</description>
    <fields>
        <fullName>AccountIdListString__c</fullName>
        <label>Account IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApexClassName__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchesFailed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Batches Failed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BatchesProcessed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Batches Processed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BatchesTotal__c</fullName>
        <label>Batches Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompletedTime__c</fullName>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Continent__c</fullName>
        <label>Continent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisableCountryChain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country Chaining Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableJobChain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Chaining Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtendedStatus__c</fullName>
        <label>Extended Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordsProcessed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Records Processed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartedBy__c</fullName>
        <label>Started By</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartedTime__c</fullName>
        <label>Started</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Batch Job</label>
    <nameField>
        <label>Batch Job ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>